--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,7 @@ edition = "2024"
 
 [dependencies]
 pixel2ascii = "0.1.1"
+clap = { version = "4.5", features = ["derive"] }
+ctrlc = "3.4"
+image = "0.25"
+serde_json = "1.0"
